tree-sitter-rampart/test/corpus/series.txt
============
Basic series
============
00:00 0
09:00 0
10:00 10
20:00 10
21:00 0
30:00 0


---
(source_file
  (series
    (point_list
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (point (mm_ss) (integer)))))

============
Series with comments
============
; ramp to 10 MW and down again
00:00 0
09:00 0 ; ramp starts here
10:00 10
; plateau here
20:00 10
21:00 0
30:00 0


---
(source_file
  (comment)
  (series
    (point_list
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (comment)
      (point (mm_ss) (integer))
      (comment)
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (point (mm_ss) (integer)))))

============
Multiple series
============
00:00 0
09:00 0
10:00 10
20:00 10
21:00 0
30:00 0

0:00 0
5:00 0
6:00 -5
12:00 -5
13:00 0
30:00 0


---
(source_file
  (series
    (point_list
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))))
  (series
    (point_list
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (point (mm_ss) (integer))
      (point (mm_ss) (integer)))))
